[package]
name = "alloc-wg"
version = "0.6.1"
authors = ["Tim Diekmann <tim.diekmann@3dvision.de>"]
edition = "2018"
description = "Attempt of collection several proposals of the allocators-wg"
repository = "https://github.com/TimDiekmann/alloc-wg"
documentation = "https://docs.rs/alloc-wg"
readme = "README.md"
keywords = ["alloc"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
std = []
default = ["std"]
dropck_eyepatch = []
coerce_unsized = []
const_generics = []
core_intrinsics = []
dispatch_from_dyn = []
exact_size_is_empty = []
fn_traits = []
boxed_slice_try_from = ["const_generics"]
receiver_trait = []
nightly = [
    "dropck_eyepatch",
    "coerce_unsized",
    "const_generics",
    "core_intrinsics",
    "dispatch_from_dyn",
    "exact_size_is_empty",
    "fn_traits",
    "boxed_slice_try_from",
    "receiver_trait",
]
