[package]
name = "alloc-wg"
version = "0.9.0"
authors = ["Tim Diekmann <tim.diekmann@3dvision.de>"]
edition = "2018"
description = "Attempt of collection several proposals of the allocators-wg"
repository = "https://github.com/TimDiekmann/alloc-wg"
documentation = "https://docs.rs/alloc-wg"
readme = "README.md"
keywords = ["alloc"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[features]
std = []
default = ["std"]
